XWIKI-22987: Avatar edition modal does not have the proper modal markup * Edited the modalPopup component to use a dialog instead of a hard-coded background. * Updated the styles to work with this new DOM and leverage better the up-to-date defaults. * Added a translation for the button * Reduced transparency of the close buttons. This improves the contrast. Note that our current automatic tester doesn't take opacity into account for calculations AFAIK... * I tried to remove most of the useless styles, but there might be some left... * Replaced all code related to the old colorthemes to use CSS variables instead. This avoid compiling velocity in a place where it's hardly even needed

--- a/xwiki-platform-core/xwiki-platform-web/xwiki-platform-web-war/src/main/webapp/resources/js/xwiki/widgets/modalPopup.css
+++ b/xwiki-platform-core/xwiki-platform-web/xwiki-platform-web-war/src/main/webapp/resources/js/xwiki/widgets/modalPopup.css
@@ -1,46 +1,22 @@
-#template('colorThemeInit.vm')
-.xdialog-modal-container {
-  position: fixed;
-  top: 0px;
-  bottom: 0px;
-  left: 0px;
-  right: 0px;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  z-index: 1005;
-}
-/* Semi-transparent overlay screen that covers the entire page. */
-.xdialog-screen {
-  position: absolute;
-  top: 0px;
-  bottom: 0px;
-  left: 0px;
-  right: 0px;
-  width: 100%;
-  height: 100%;
-  background-color: #000;
-}
 .xdialog-box {
-  text-align: left;
-  padding: 0;
-  margin: auto;
-  position: relative;
-  color: $theme.panelTextColor;
-  border: 1px solid $theme.borderColor;
-  background-color: $theme.panelBackgroundColor;
-  border-radius: 10px;
-}
-.xdialog-box {
-  max-height: 100%; /* Needed because of position: fixed */
-  overflow: auto; 
   width: auto;
-}
-@media (min-width: 768px) { /* Should be: @screen-sm-min */
-  .xdialog-box {
-    width: 400px; /* Should be: @modal-md */
+  padding: 0;
+  /* By default the dialog box will be centered on the page using margins*/
+  margin: auto;
+  color: var(--panel-default-text);
+  border: 1px solid var(--xwiki-border-color);
+  background-color: var(--panel-bg);
+  border-radius: var(--border-radius-large);
+
+  /* Semi-transparent overlay screen that covers the entire page. */
+  &::backdrop {
+    --xdialog-backdrop-color: #000;
+    background-color: var(--xdialog-backdrop-color);
+    --xdialog-backdrop-opacity: .5;
+    opacity: var(--xdialog-backdrop-opacity);
   }
 }
+
 .xdialog-box .xdialog-content,
 .xdialog-box > .xdialog-close {
   margin: .8em;
@@ -50,12 +26,12 @@
 }
 .xdialog-title .xdialog-close {
   font-size: 1.25em;
-  color: $theme.panelHeaderTextColor;
+  color: var(--panel-header-text);
 }
 .xdialog-title {
   font-size: 142%;
   padding: 15px;
-  border-bottom: 1px solid $theme.borderColor;
+  border-bottom: 1px solid var(--xwiki-border-color);
 }
 .xdialog-box .xform {
   width: 100%;
